# UG

./: .gitignore
01_Write_Prat_Attr/: Write_Prat_Attr.dlx  Write_Prat_Attr.sln  embedded_dialog_resources.h  embedded_dialog_resources.rc
02_PiLian_Write_Prat_Attr/: PiLian_Write_Prat_Attr.dlx  PiLian_Write_Prat_Attr.sln  embedded_dialog_resources.h  embedded_dialog_resources.rc
03_ZiDonFenCen/: ZiDonFenCen.cpp  ZiDonFenCen.dlx  ZiDonFenCen.hpp  ZiDonFenCen.sln  embedded_dialog_resources.h  embedded_dialog_resources.rc
04_BiaoJIXIan/: .gitignore  BiaoJIXIan.dlx  BiaoJiXian.sln  BiaoJiXian.vcxproj  BiaoJiXian_BJ.cpp  BiaoJiXian_BJ.hpp  CMakeLists.txt  MarkLineBuilder.cpp  MarkLineBuilder.hpp  NX2412_SecondaryDevelopment_Notes.md  README.md  backup_git.ps1  embedded_dialog_resources.h  embedded_dialog_resources.rc
04_BiaoJIXIan/build-cmake/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BiaoJIXIan.sln  BiaoJIXIan.vcxproj  BiaoJIXIan.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
04_BiaoJIXIan/src/: BiaoJiXian.cpp
05_SouDonZuanBanJin/: .gitignore  PiLianZuanBanJinRulesTable.dlx  SouDonZuanBanJin.dlx  SouDonZuanBanJinr.sln  embedded_dialog_resources.h  embedded_dialog_resources.rc
06_PiLianZuanBanJin/: embedded_dialog_resources.h  embedded_dialog_resources.rc
07_HoleAttribute/: AAE005285A_120A_traced.dxf  HoleAttribute.cpp  HoleAttribute.dlx  HoleAttribute.hpp  HoleAttribute.vcxproj  HoleAttribute.vcxproj.filters  README.md  build_hiwin_summary.mjs  build_semiconductor_platform_precision.mjs  embedded_dialog_resources.h  embedded_dialog_resources.rc
08_ZiDonCuTu/: ZiDonCuTu.dlx  ZiDonCuTu.sln  ZiDonCuTu_note_format.ini  build_attachment1_style_spec.py  embedded_dialog_resources.h  embedded_dialog_resources.rc
09_KonBiaoZu/: KonBiaoZu.vcxproj  NX2412.props  NXSigningResource.cpp  README.md  embedded_dialog_resources.h  embedded_dialog_resources.rc
10_MaxDim/: MaxDim.sln  embedded_dialog_resources.h  embedded_dialog_resources.rc
11_ZiDonBiaoZhu/: ZiDonBiaoZhu.sln  embedded_dialog_resources.h  embedded_dialog_resources.rc
12_BianHao/: BianHao.dlx  BianHao.sln  embedded_dialog_resources.h  embedded_dialog_resources.rc
13_BODYNOT/: BODYNOT.dlx  bodynot.sln  embedded_dialog_resources.h  embedded_dialog_resources.rc
15_MenBanSiBian/: MenBanSiBian.sln  embedded_dialog_resources.h  embedded_dialog_resources.rc
16_BaoLonTiFenGe/: BaoLonTiFenGe.sln  embedded_dialog_resources.h  embedded_dialog_resources.rc
17_BaoRongQieChu/: BaoRongQieChu.cpp  BaoRongQieChu.hpp  BaoRongQieChuMain.cpp  CMakeLists.txt  README.md  embedded_dialog_resources.h  embedded_dialog_resources.rc  raspberrypi-hdmi-4k-config.txt
17_BaoRongQieChu/build-cmake/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BaoRongQieChu.sln  BaoRongQieChu.vcxproj  BaoRongQieChu.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
17_BaoRongQieChu/build-codex/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BaoRongQieChu.sln  BaoRongQieChu.vcxproj  BaoRongQieChu.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
17_BaoRongQieChu/build-compile-check/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BaoRongQieChu.sln  BaoRongQieChu.vcxproj  BaoRongQieChu.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
17_BaoRongQieChu/build-compile-check/Release/: BaoRongQieChu.dlx
18_ZheWanBiRangCao/: CMakeLists.txt  README.md  ZheWanBiRangCao.cpp  ZheWanBiRangCao.hpp  ZheWanBiRangCaoMain.cpp  embedded_dialog_resources.h  embedded_dialog_resources.rc
18_ZheWanBiRangCao/build-cmake/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  ZheWanBiRangCao.sln  ZheWanBiRangCao.vcxproj  ZheWanBiRangCao.vcxproj.filters  cmake_install.cmake
18_ZheWanBiRangCao/build-codex/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  ZheWanBiRangCao.sln  ZheWanBiRangCao.vcxproj  ZheWanBiRangCao.vcxproj.filters  cmake_install.cmake
18_ZheWanBiRangCao/build-codex/Release/: ZheWanBiRangCao.dlx
18_ZheWanBiRangCao/build-compile-check/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  ZheWanBiRangCao.sln  ZheWanBiRangCao.vcxproj  ZheWanBiRangCao.vcxproj.filters  cmake_install.cmake
18_ZheWanBiRangCao/build-compile-check/Release/: ZheWanBiRangCao.dlx
19_BanJjinCaiBian/: BanJjinCaiBian.cpp  BanJjinCaiBian.dlx  BanJjinCaiBian.hpp  BanJjinCaiBian.vcxproj  BanJjinCaiBian.vcxproj.filters  README.md  embedded_dialog_resources.h  embedded_dialog_resources.rc
20_BanJinCaiTu/: BanJinCaiTuDialog.cpp  BanJinCaiTuDialog.hpp  BanJinCaiTuDialog.vcxproj  embedded_dialog_resources.h  embedded_dialog_resources.rc
21_FangTongKaKou/: FangTongKaKou.vcxproj  FangTongKaKou.vcxproj.filters  README.md  embedded_dialog_resources.h  embedded_dialog_resources.rc
22_XuanZeGuanJian/: README.md  XuanZeGuanJian.dlx  XuanZeGuanJian.vcxproj  XuanZeGuanJian.vcxproj.filters  embedded_dialog_resources.h  embedded_dialog_resources.rc
23_DuoSiTiZuanZuanPei/: DuoSiTiZuanZuanPei.dlx  DuoSiTiZuanZuanPei.vcxproj  embedded_dialog_resources.h  embedded_dialog_resources.rc
24_ChaiJiJia/: ChaiJiJia.dlx  ChaiJiJia.vcxproj  ChaiJiJia.vcxproj.filters  README.md  embedded_dialog_resources.h  embedded_dialog_resources.rc
25-PILianDaoCuZKT/: PILianDaoCuZKT.sln  README.md  embedded_dialog_resources.h  embedded_dialog_resources.rc
26_2P_BiLanCao/: CMakeLists.txt  TwoPointBiLanCao.cpp  TwoPointBiLanCao.dlx  TwoPointBiLanCao.hpp  TwoPointBiLanCao.sln  TwoPointBiLanCao.vcxproj  TwoPointBiLanCao.vcxproj.filters  TwoPointBiLanCaoMain.cpp  embedded_dialog_resources.h  embedded_dialog_resources.rc
27_AutoCreateThreeViews/: AutoCreateThreeViews.cpp  AutoCreateThreeViews.hpp  AutoCreateThreeViews.sln  AutoCreateThreeViews.vcxproj  AutoCreateThreeViews.vcxproj.filters  AutoCreateThreeViewsMain.cpp  README.md  (+3 more)
(+191 files in other folders)
